--- a/index.html
+++ b/index.html
@@ -275,10 +275,7 @@
     .hero-tagline { margin-top: 0.5rem; }
     
     .hero-subtitle {
-      margin-bottom: 0.75rem;
-      line-height: 1.55;
-      font-size: 1.15rem;
-      max-width: 46ch;
+      /* This will be overridden by clean.css */
     }
     
     .glow-text {
