--- a/index.html
+++ b/index.html
@@ -624,13 +624,17 @@
         <!-- Image Scroller -->
         <div class="image-scroller">
           <div class="image-scroller-track">
-            <img src="deca_venue.jpeg" alt="Erika Wu">
-            <img src="IMG_0152.jpeg" alt="Erika Wu">
-            <img src="IMG_0828.jpeg" alt="Erika Wu">
+            <img src="erika_wu_profile.jpeg" alt="Erika Wu" loading="eager" decoding="async">
+            <img src="IMG_7198.jpeg" alt="Erika Wu" loading="lazy" decoding="async">
+            <img src="IMG_4730.jpeg" alt="Erika Wu" loading="lazy" decoding="async">
+            <img src="deca_venue.jpeg" alt="Erika Wu" loading="lazy" decoding="async">
+            <img src="IMG_0828.jpeg" alt="Erika Wu" loading="lazy" decoding="async">
             <!-- Duplicates for seamless scrolling -->
-            <img src="deca_venue.jpeg" alt="Erika Wu">
-            <img src="IMG_0152.jpeg" alt="Erika Wu">
-            <img src="IMG_0828.jpeg" alt="Erika Wu">
+            <img src="erika_wu_profile.jpeg" alt="" aria-hidden="true" loading="lazy" decoding="async">
+            <img src="IMG_7198.jpeg" alt="" aria-hidden="true" loading="lazy" decoding="async">
+            <img src="IMG_4730.jpeg" alt="" aria-hidden="true" loading="lazy" decoding="async">
+            <img src="deca_venue.jpeg" alt="" aria-hidden="true" loading="lazy" decoding="async">
+            <img src="IMG_0828.jpeg" alt="" aria-hidden="true" loading="lazy" decoding="async">
           </div>
         </div>
 
