--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' x2='1' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%237dd3fc'/%3E%3Cstop offset='1' stop-color='%2360a5fa'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect rx='14' ry='14' width='64' height='64' fill='url(%23g)'/%3E%3Cpath d='M18 34c6-8 22-8 28 0' stroke='white' stroke-opacity='.8' stroke-width='4' fill='none'/%3E%3Ccircle cx='32' cy='28' r='6' fill='white' fill-opacity='.9'/%3E%3C/svg%3E" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/bundled/lenis.min.js" defer></script>
   </head>
   <body>
   <!-- Animated background elements -->
@@ -1076,6 +1077,11 @@
       // Initialize event icon slideshow
       initEventSlideshow();
       initVideoModal();
+      
+      // Smooth scrolling and scroll-based animations
+      initLenis();
+      initRevealUtilities();
+      initParallax();
       });
 
     // Text reveal animation
@@ -1557,6 +1563,83 @@
         const src = item.getAttribute('data-video-src');
         if (src) open(src);
       });
+    }
+
+    // Smooth scrolling (Lenis)
+    function initLenis() {
+      if (!window.Lenis) return;
+      const lenis = new window.Lenis({
+        duration: 1.1,
+        smoothWheel: true,
+        smoothTouch: false
+      });
+      function raf(time) {
+        lenis.raf(time);
+        requestAnimationFrame(raf);
+      }
+      requestAnimationFrame(raf);
+    }
+
+    // Reveal & stagger utilities
+    function initRevealUtilities() {
+      // Auto-apply reveals to common elements (avoid elements that animate via transform)
+      document.querySelectorAll('.section .section-title, .section .section-subtitle, .hero-cta, .typing-container').forEach(el => el.classList.add('reveal'));
+      document.querySelectorAll('.carousel, .event-scroller, .image-scroller, .written-marquee').forEach(el => el.classList.add('reveal'));
+      document.querySelectorAll('.faq-item, .instagram-card, .card, .vm-item, .wm-card').forEach(el => el.classList.add('reveal'));
+
+      const singleReveals = document.querySelectorAll('[data-reveal], .reveal');
+      const staggerGroups = document.querySelectorAll('[data-stagger], .stagger');
+
+      const singleObs = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('in');
+            singleObs.unobserve(entry.target);
+          }
+        });
+      }, { rootMargin: '0px 0px -10% 0px', threshold: 0.15 });
+
+      const staggerObs = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('in');
+            staggerObs.unobserve(entry.target);
+          }
+        });
+      }, { rootMargin: '0px 0px -10% 0px', threshold: 0.15 });
+
+      singleReveals.forEach(el => singleObs.observe(el));
+      staggerGroups.forEach(el => staggerObs.observe(el));
+    }
+
+    // Lightweight parallax using data attributes
+    function initParallax() {
+      // Apply defaults if author didn't mark elements (avoid transform-animated tracks)
+      const defaults = document.querySelectorAll('.hero .container, .instagram-card');
+      defaults.forEach(el => { if (el && !el.hasAttribute('data-parallax')) el.setAttribute('data-parallax', '0.12'); });
+
+      const parallaxEls = document.querySelectorAll('[data-parallax]');
+      if (!parallaxEls.length) return;
+      let ticking = false;
+      const onScroll = () => {
+        if (ticking) return;
+        ticking = true;
+        requestAnimationFrame(() => {
+          const viewH = window.innerHeight;
+          parallaxEls.forEach(el => {
+            const speed = parseFloat(el.getAttribute('data-parallax')) || 0.15;
+            const rect = el.getBoundingClientRect();
+            const center = rect.top + rect.height / 2;
+            const delta = (center - viewH / 2);
+            const translateY = -(delta * speed);
+            el.style.transform = `translateY(${translateY}px)`;
+          });
+          ticking = false;
+        });
+      };
+      window.addEventListener('scroll', onScroll, { passive: true });
+      window.addEventListener('resize', onScroll);
+      onScroll();
     }
 
     // Testimonial Reel interactions
