--- a/index.html
+++ b/index.html
@@ -387,6 +387,15 @@
     <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/bundled/lenis.min.js" defer></script>
   </head>
   <body>
+  <div class="scroll-progress" aria-hidden="true"></div>
+  <div id="introOverlay" class="intro-overlay" aria-hidden="true">
+    <div class="intro-wrap">
+      <div class="intro-bar">
+        <div class="intro-fill" id="introFill" style="width:0%"></div>
+      </div>
+      <div class="intro-text"><span id="introLabel">0%</span></div>
+    </div>
+  </div>
   <!-- Animated background elements -->
   <div class="animated-bg"></div>
   <div class="diamond-bg"></div>
@@ -709,7 +718,13 @@
           </div>
           
           <p class="text-muted" style="font-size: 1.25rem; line-height: 1.6;">
-            3x intl winner. Ranked in the top percentile by Stanford professors as a high schooler, Erika immediately spots weaknesses and offers tailored suggestions for improvement. Her testing resources are exclusive, known only by her mentees who have won ICDC glass. As a 3 year DECA member who initially struggled, Erika’s personal philosophy is that there is no better person to learn from than someone who has been in your shoes and eventually come out on top.
+            Erika Wu is a 3x DECA ICDC international award winner, placing 4th in the world and sweeping all preliminary awards—proof of her consistent top-tier performance on the global stage. As Vice President of her 200+ member chapter, she not only excelled herself but also trained and mentored one of the largest teams in her state—all while graduating valedictorian, AP Scholar with Distinction, and a top-percentile Stanford researcher.
+          </p>
+          <p class="text-muted" style="font-size: 1.25rem; line-height: 1.6;">
+            Now at the NYU Stern School of Business, Erika has turned her experience into coaching. In the past year alone, she’s sent 25+ students to ICDC, with over 80% winning top awards. Her edge? Exclusive resources (no, not DECA+) powerful enough to take students from zero to 95+ scores in under two months.
+          </p>
+          <p class="text-muted" style="font-size: 1.25rem; line-height: 1.6;">
+            What sets Erika apart isn’t just her accolades, but her proven ability to transform students from average to exceptional—a skill even champions rarely replicate
           </p>
           
           <div class="mt-8">
@@ -738,7 +753,7 @@
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
                 </div>
-                <div class="vm-caption"><span class="vm-name">Devin</span><span class="vm-meta">ICDC 3rd & Chapter VP</span></div>
+                <div class="vm-caption"><span class="vm-name">Devin</span><span class="vm-meta">ICDC 2nd & Chapter VP</span></div>
               </article>
               <article class="vm-item" data-video-src="IMG_7342.mov">
                 <div class="vm-media">
@@ -785,7 +800,7 @@
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
                   </div>
-                <div class="vm-caption"><span class="vm-name">Devin</span><span class="vm-meta">ICDC 3rd & Chapter VP</span></div>
+                <div class="vm-caption"><span class="vm-name">Devin</span><span class="vm-meta">ICDC 2nd & Chapter VP</span></div>
               </article>
               <article class="vm-item" data-video-src="IMG_7342.mov">
                 <div class="vm-media">
@@ -837,13 +852,13 @@
             <div class="wm-column down">
               <div class="wm-stack">
                 <!-- Set A -->
-                <article class="wm-card"><h4 class="t-name">Devin</h4><p class="t-meta">ICDC 3rd & Chapter VP</p><p class="t-quote">Erika is extremely adept at both teaching and encouraging students, including myself. Even though I struggled early on in my journey, she never gave up on me. With Erika as a mentor, I was able to build off of personalized advice that I simply wouldn't have been able to find otherwise. Whether you are seeking help in DECA or public speaking in general, know that Erika will always deliver.</p></article>
+                <article class="wm-card"><h4 class="t-name">Devin</h4><p class="t-meta">ICDC 2nd & Chapter VP</p><p class="t-quote">Erika is extremely adept at both teaching and encouraging students, including myself. Even though I struggled early on in my journey, she never gave up on me. With Erika as a mentor, I was able to build off of personalized advice that I simply wouldn't have been able to find otherwise. Whether you are seeking help in DECA or public speaking in general, know that Erika will always deliver.</p></article>
                 <article class="wm-card"><h4 class="t-name">Saahithi</h4><p class="t-meta">CA 2nd Place & ICDC Qualifier</p><p class="t-quote">Even though we primarily only practiced for our roleplay event, I think your help with my public speaking is ultimately what helped me win 2nd place in CA and qualify for ICDC with my written! Thank you so much Erika, I’m super grateful :)</p></article>
                 <article class="wm-card"><h4 class="t-name">Brandon</h4><p class="t-meta">From Brandon’s mom • ICDC Qualifier</p><p class="t-quote">Erika is one of the most effective and resourceful teachers I have ever seen. She not only is extremely proficient in coaching public speaking skills, she is also extraordinary in her ability to tailor her teaching to different students with different needs and weaknesses. I know that because both I and my son have taken classes with Erica and we both benefitted tremendously with completely unique advice that Erica was able to develop for each of us.</p></article>
                 <article class="wm-card"><h4 class="t-name">Fiza</h4><p class="t-meta">Ontario Provincial Finalist</p><p class="t-quote">Erika spent hours reviewing videos of my DECA roleplays and providing detailed feedback in addition to our tutoring sessions. Although she was only my tutor for a short period of time, in that time she significantly improved my skills. She personalized her feedback to my specific strengths and weaknesses so I could get the best results. She also provided unique feedback that I didn’t get from anyone else, which was necessary to help me succeed. Her dedication and expertise made a noticeable difference in my performance, helping me refine my presentation, enhance my business terminology, and build confidence in my case studies. She goes beyond just offering general advice—her coaching is tailored, insightful, and practical. I highly recommend Erika’s tutoring to anyone looking to take their DECA skills to the next level.</p></article>
 
                 <!-- Duplicate Set B -->
-                <article class="wm-card"><h4 class="t-name">Devin</h4><p class="t-meta">ICDC 3rd & Chapter VP</p><p class="t-quote">Erika is extremely adept at both teaching and encouraging students, including myself. Even though I struggled early on in my journey, she never gave up on me. With Erika as a mentor, I was able to build off of personalized advice that I simply wouldn't have been able to find otherwise. Whether you are seeking help in DECA or public speaking in general, know that Erika will always deliver.</p></article>
+                <article class="wm-card"><h4 class="t-name">Devin</h4><p class="t-meta">ICDC 2nd & Chapter VP</p><p class="t-quote">Erika is extremely adept at both teaching and encouraging students, including myself. Even though I struggled early on in my journey, she never gave up on me. With Erika as a mentor, I was able to build off of personalized advice that I simply wouldn't have been able to find otherwise. Whether you are seeking help in DECA or public speaking in general, know that Erika will always deliver.</p></article>
                 <article class="wm-card"><h4 class="t-name">Saahithi</h4><p class="t-meta">CA 2nd Place & ICDC Qualifier</p><p class="t-quote">Even though we primarily only practiced for our roleplay event, I think your help with my public speaking is ultimately what helped me win 2nd place in CA and qualify for ICDC with my written! Thank you so much Erika, I’m super grateful :)</p></article>
                 <article class="wm-card"><h4 class="t-name">Brandon</h4><p class="t-meta">From Brandon’s mom • ICDC Qualifier</p><p class="t-quote">Erika is one of the most effective and resourceful teachers I have ever seen. She not only is extremely proficient in coaching public speaking skills, she is also extraordinary in her ability to tailor her teaching to different students with different needs and weaknesses. I know that because both I and my son have taken classes with Erica and we both benefitted tremendously with completely unique advice that Erica was able to develop for each of us.</p></article>
                 <article class="wm-card"><h4 class="t-name">Fiza</h4><p class="t-meta">Ontario Provincial Finalist</p><p class="t-quote">Erika spent hours reviewing videos of my DECA roleplays and providing detailed feedback in addition to our tutoring sessions. Although she was only my tutor for a short period of time, in that time she significantly improved my skills. She personalized her feedback to my specific strengths and weaknesses so I could get the best results. She also provided unique feedback that I didn’t get from anyone else, which was necessary to help me succeed. Her dedication and expertise made a noticeable difference in my performance, helping me refine my presentation, enhance my business terminology, and build confidence in my case studies. She goes beyond just offering general advice—her coaching is tailored, insightful, and practical. I highly recommend Erika’s tutoring to anyone looking to take their DECA skills to the next level.</p></article>
@@ -1082,6 +1097,8 @@
       initLenis();
       initRevealUtilities();
       initParallax();
+      initScrollProgress();
+      initIntroOverlay();
       });
 
     // Text reveal animation
@@ -1583,11 +1600,20 @@
     // Reveal & stagger utilities
     function initRevealUtilities() {
       // Auto-apply reveals to common elements (avoid elements that animate via transform)
-      document.querySelectorAll('.section .section-title, .section .section-subtitle, .hero-cta, .typing-container').forEach(el => el.classList.add('reveal'));
-      document.querySelectorAll('.carousel, .event-scroller, .image-scroller, .written-marquee').forEach(el => el.classList.add('reveal'));
-      document.querySelectorAll('.faq-item, .instagram-card, .card, .vm-item, .wm-card').forEach(el => el.classList.add('reveal'));
+      document.querySelectorAll('.section .section-title, .section .section-subtitle').forEach(el => { el.classList.add('reveal'); el.classList.add('reveal-tilt'); });
+      document.querySelectorAll('.hero-cta, .typing-container').forEach(el => { el.classList.add('reveal'); el.classList.add('reveal-zoom'); });
+      document.querySelectorAll('.faq-item, .instagram-card, .card').forEach(el => { el.classList.add('reveal'); el.classList.add('reveal-blur'); el.classList.add('reveal-glow'); });
 
-      const singleReveals = document.querySelectorAll('[data-reveal], .reveal');
+      // Ensure complex animated containers remain visible (no masking on these)
+      document.querySelectorAll('.carousel, .carousel-container, .event-scroller, .event-track, .image-scroller, .image-scroller-track, .written-marquee, .wm-stack, .vm-track, .vm-item, .wm-card').forEach(el => {
+        el.classList.remove('reveal','reveal-mask','reveal-blur','reveal-zoom','reveal-tilt','reveal-glow','in');
+        el.style.clipPath = '';
+        el.style.opacity = '';
+        el.style.transform = '';
+        el.style.filter = '';
+      });
+
+      const singleReveals = document.querySelectorAll('[data-reveal], .reveal, .reveal-tilt, .reveal-zoom, .reveal-blur');
       const staggerGroups = document.querySelectorAll('[data-stagger], .stagger');
 
       const singleObs = new IntersectionObserver((entries) => {
@@ -1742,6 +1768,90 @@
           }
         });
       });
+    }
+
+    // Intro overlay controlled by scroll progress
+    function initIntroOverlay() {
+      const overlay = document.getElementById('introOverlay');
+      const fill = document.getElementById('introFill');
+      const label = document.getElementById('introLabel');
+      if (!overlay || !fill || !label) return;
+
+      let progress = 0;
+      let completed = false;
+
+      // Lock scroll of document; allow overlay to capture wheel/touch
+      const root = document.documentElement;
+      const prevOverflow = root.style.overflow;
+      root.style.overflow = 'hidden';
+
+      const step = (delta) => {
+        if (completed) return;
+        progress = Math.max(0, Math.min(100, progress + delta));
+        fill.style.width = progress + '%';
+        label.textContent = Math.round(progress) + '%';
+        if (progress >= 100 && !completed) {
+          completed = true;
+          // Bounce bar and label twice
+          const bar = overlay.querySelector('.intro-bar');
+          const txt = overlay.querySelector('.intro-text');
+          if (bar) bar.classList.add('intro-bounce');
+          if (txt) txt.classList.add('intro-bounce');
+          // Dismiss after bounce
+          setTimeout(() => {
+            overlay.style.opacity = '0';
+            overlay.style.transition = 'opacity 360ms ease';
+          }, 700);
+          setTimeout(() => {
+            overlay.remove();
+            root.style.overflow = prevOverflow || '';
+          }, 1100);
+        }
+      };
+
+      // Map scroll/touch/keys to progress increments
+      const onWheel = (e) => {
+        e.preventDefault();
+        const delta = Math.sign(e.deltaY) * 6; // tune speed
+        step(delta);
+      };
+      const onKey = (e) => {
+        const keys = ['ArrowDown','PageDown',' '];
+        const upKeys = ['ArrowUp','PageUp'];
+        if (keys.includes(e.key)) { e.preventDefault(); step(6); }
+        if (upKeys.includes(e.key)) { e.preventDefault(); step(-6); }
+      };
+      let touchY = null;
+      const onTouchStart = (e) => { touchY = e.touches[0].clientY; };
+      const onTouchMove = (e) => {
+        if (touchY == null) return;
+        const dy = touchY - e.touches[0].clientY;
+        if (Math.abs(dy) > 4) {
+          e.preventDefault();
+          step(Math.sign(dy) * 6);
+          touchY = e.touches[0].clientY;
+        }
+      };
+
+      overlay.addEventListener('wheel', onWheel, { passive: false });
+      overlay.addEventListener('touchstart', onTouchStart, { passive: false });
+      overlay.addEventListener('touchmove', onTouchMove, { passive: false });
+      window.addEventListener('keydown', onKey, { passive: false });
+    }
+    // Scroll progress bar
+    function initScrollProgress() {
+      const bar = document.querySelector('.scroll-progress');
+      if (!bar) return;
+      const update = () => {
+        const h = document.documentElement;
+        const scrollTop = h.scrollTop || document.body.scrollTop;
+        const scrollHeight = h.scrollHeight - h.clientHeight;
+        const p = scrollHeight > 0 ? (scrollTop / scrollHeight) * 100 : 0;
+        bar.style.width = p + '%';
+      };
+      document.addEventListener('scroll', update, { passive: true });
+      window.addEventListener('resize', update);
+      update();
     }
     </script>
   </body>
