--- a/index.html
+++ b/index.html
@@ -388,14 +388,6 @@
   </head>
   <body>
   <div class="scroll-progress" aria-hidden="true"></div>
-  <div id="introOverlay" class="intro-overlay" aria-hidden="true">
-    <div class="intro-wrap">
-      <div class="intro-bar">
-        <div class="intro-fill" id="introFill" style="width:0%"></div>
-      </div>
-      <div class="intro-text"><span id="introLabel">0%</span></div>
-    </div>
-  </div>
   <!-- Animated background elements -->
   <div class="animated-bg"></div>
   <div class="diamond-bg"></div>
@@ -1098,7 +1090,6 @@
       initRevealUtilities();
       initParallax();
       initScrollProgress();
-      initIntroOverlay();
       });
 
     // Text reveal animation
@@ -1602,7 +1593,9 @@
       // Auto-apply reveals to common elements (avoid elements that animate via transform)
       document.querySelectorAll('.section .section-title, .section .section-subtitle').forEach(el => { el.classList.add('reveal'); el.classList.add('reveal-tilt'); });
       document.querySelectorAll('.hero-cta, .typing-container').forEach(el => { el.classList.add('reveal'); el.classList.add('reveal-zoom'); });
-      document.querySelectorAll('.faq-item, .instagram-card, .card').forEach(el => { el.classList.add('reveal'); el.classList.add('reveal-blur'); el.classList.add('reveal-glow'); });
+      document.querySelectorAll('.faq-item, .instagram-card, .card').forEach(el => { el.classList.add('reveal'); el.classList.add('reveal-up'); el.classList.add('reveal-glow'); });
+      // Subtle fades for heavy movers (items only, not tracks)
+      document.querySelectorAll('.vm-item, .wm-card, .event-item').forEach(el => { el.classList.add('reveal-fade'); });
 
       // Ensure complex animated containers remain visible (no masking on these)
       document.querySelectorAll('.carousel, .carousel-container, .event-scroller, .event-track, .image-scroller, .image-scroller-track, .written-marquee, .wm-stack, .vm-track, .vm-item, .wm-card').forEach(el => {
@@ -1613,7 +1606,7 @@
         el.style.filter = '';
       });
 
-      const singleReveals = document.querySelectorAll('[data-reveal], .reveal, .reveal-tilt, .reveal-zoom, .reveal-blur');
+      const singleReveals = document.querySelectorAll('[data-reveal], .reveal, .reveal-tilt, .reveal-zoom, .reveal-blur, .reveal-up, .reveal-fade');
       const staggerGroups = document.querySelectorAll('[data-stagger], .stagger');
 
       const singleObs = new IntersectionObserver((entries) => {
@@ -1636,6 +1629,15 @@
 
       singleReveals.forEach(el => singleObs.observe(el));
       staggerGroups.forEach(el => staggerObs.observe(el));
+
+      // Section ambient glow toggle
+      const sections = document.querySelectorAll('.section');
+      const secObs = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          entry.target.classList.toggle('section-in', entry.isIntersecting);
+        });
+      }, { threshold: 0.2 });
+      sections.forEach(s => secObs.observe(s));
     }
 
     // Lightweight parallax using data attributes
@@ -1770,121 +1772,7 @@
       });
     }
 
-    // Intro overlay controlled by scroll progress
-    function initIntroOverlay() {
-      const overlay = document.getElementById('introOverlay');
-      const fill = document.getElementById('introFill');
-      const label = document.getElementById('introLabel');
-      if (!overlay || !fill || !label) return;
-
-      let progress = 0;
-      let completed = false;
-
-      // Lock scroll of document; allow overlay to capture wheel/touch
-      const root = document.documentElement;
-      const prevOverflow = root.style.overflow;
-      root.style.overflow = 'hidden';
-
-      // smoother progress: buffered target with rAF tween
-      let target = 0;
-      let rafId = null;
-      const tick = () => {
-        const diff = target - progress;
-        if (Math.abs(diff) > 0.02) {
-          progress += diff * 0.15; // easing
-          fill.style.transform = `scaleX(${Math.max(0, Math.min(1, progress/100))})`;
-          label.textContent = Math.round(progress) + '%';
-          rafId = requestAnimationFrame(tick);
-        } else {
-          progress = target;
-          fill.style.transform = `scaleX(${Math.max(0, Math.min(1, progress/100))})`;
-          label.textContent = Math.round(progress) + '%';
-          rafId = null;
-          if (progress >= 100 && !completed) onComplete();
-        }
-      };
-      const setTarget = (next) => {
-        if (completed) return;
-        target = Math.max(0, Math.min(100, next));
-        if (!rafId) rafId = requestAnimationFrame(tick);
-      };
-
-      const onComplete = () => {
-        completed = true;
-        const bar = overlay.querySelector('.intro-bar');
-        const txt = overlay.querySelector('.intro-text');
-        if (bar) bar.classList.add('intro-bounce');
-        if (txt) txt.classList.add('intro-bounce');
-        setTimeout(() => {
-          overlay.style.opacity = '0';
-          overlay.style.transition = 'opacity 360ms ease';
-        }, 700);
-        setTimeout(() => {
-          overlay.remove();
-          root.style.overflow = prevOverflow || '';
-        }, 1100);
-      };
-
-      const step = (delta) => {
-        if (completed) return;
-        setTarget(target + delta);
-        if (target >= 100 && !completed && !rafId) onComplete();
-      };
-
-      // initialize transform
-      fill.style.transform = 'scaleX(0)';
-      label.textContent = '0%';
-
-      if (!rafId) rafId = requestAnimationFrame(tick);
-
-      if (progress >= 100 && !completed) {
-          completed = true;
-          // Bounce bar and label twice
-          const bar = overlay.querySelector('.intro-bar');
-          const txt = overlay.querySelector('.intro-text');
-          if (bar) bar.classList.add('intro-bounce');
-          if (txt) txt.classList.add('intro-bounce');
-          // Dismiss after bounce
-          setTimeout(() => {
-            overlay.style.opacity = '0';
-            overlay.style.transition = 'opacity 360ms ease';
-          }, 700);
-          setTimeout(() => {
-            overlay.remove();
-            root.style.overflow = prevOverflow || '';
-          }, 1100);
-        }
-      };
-
-      // Map scroll/touch/keys to progress increments
-      const onWheel = (e) => {
-        e.preventDefault();
-        const delta = Math.sign(e.deltaY) * 6; // tune speed
-        step(delta);
-      };
-      const onKey = (e) => {
-        const keys = ['ArrowDown','PageDown',' '];
-        const upKeys = ['ArrowUp','PageUp'];
-        if (keys.includes(e.key)) { e.preventDefault(); step(6); }
-        if (upKeys.includes(e.key)) { e.preventDefault(); step(-6); }
-      };
-      let touchY = null;
-      const onTouchStart = (e) => { touchY = e.touches[0].clientY; };
-      const onTouchMove = (e) => {
-        if (touchY == null) return;
-        const dy = touchY - e.touches[0].clientY;
-        if (Math.abs(dy) > 4) {
-          e.preventDefault();
-          step(Math.sign(dy) * 6);
-          touchY = e.touches[0].clientY;
-        }
-      };
-
-      overlay.addEventListener('wheel', onWheel, { passive: false });
-      overlay.addEventListener('touchstart', onTouchStart, { passive: false });
-      overlay.addEventListener('touchmove', onTouchMove, { passive: false });
-      window.addEventListener('keydown', onKey, { passive: false });
-    }
+    
     // Scroll progress bar
     function initScrollProgress() {
       const bar = document.querySelector('.scroll-progress');
