--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
   </style>
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' x2='1' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%237dd3fc'/%3E%3Cstop offset='1' stop-color='%2360a5fa'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect rx='14' ry='14' width='64' height='64' fill='url(%23g)'/%3E%3Cpath d='M18 34c6-8 22-8 28 0' stroke='white' stroke-opacity='.8' stroke-width='4' fill='none'/%3E%3Ccircle cx='32' cy='28' r='6' fill='white' fill-opacity='.9'/%3E%3C/svg%3E" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.halo.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/bundled/lenis.min.js" defer></script>
   </head>
   <body>
@@ -1060,10 +1060,9 @@
       // Initialize FAQ accordion
       initFaqAccordion();
       
-      // Initialize Vanta.js background
-        if (window.VANTA && window.VANTA.NET) {
-          // Tune NET to look like connected diamonds/triangles
-          window.VANTA.NET({
+      // Initialize Vanta.js background (HALO for a futuristic glow)
+        if (window.VANTA && window.VANTA.HALO) {
+          window.VANTA.HALO({
             el: '#vanta-bg',
             mouseControls: true,
             touchControls: true,
@@ -1072,12 +1071,15 @@
             minWidth: 200.00,
             scale: 1.0,
             scaleMobile: 1.0,
-            color: 0x60a5fa,
             backgroundColor: 0x000000,
-            points: 7.5,          // fewer nodes
-            maxDistance: 28.0,     // longer edges to connect across
-            spacing: 14.0,         // moderate spacing
-            showDots: false        // emphasize lines over points
+            xOffset: 0.15,
+            yOffset: 0.1,
+            amplitudeFactor: 2.1,
+            size: 1.4,
+            baseColor: 0x60a5fa,
+            highlightColor: 0x22d3ee,
+            glow: 0.8,
+            waveHeight: 16.0,
           });
         }
         
