--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
               <!-- Set A -->
               <article class="vm-item" data-video-src="IMG_1936.mov">
                 <div class="vm-media">
-                  <video class="vm-video" src="IMG_1936.mov" preload="metadata" playsinline muted loop></video>
+                  <video class="vm-video" src="IMG_1936.mov" preload="metadata" playsinline muted loop poster="IMG_7198.jpeg"></video>
                   <button class="vm-play" aria-label="Play video">
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
@@ -749,7 +749,7 @@
               </article>
               <article class="vm-item" data-video-src="IMG_7342.mov">
                 <div class="vm-media">
-                  <video class="vm-video" src="IMG_7342.mov" preload="metadata" playsinline muted loop></video>
+                  <video class="vm-video" src="IMG_7342.mov" preload="metadata" playsinline muted loop poster="IMG_1041.jpeg"></video>
                   <button class="vm-play" aria-label="Play video">
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
@@ -758,7 +758,7 @@
               </article>
               <article class="vm-item" data-video-src="copy_459B0AD1-EBF1-4F2A-A192-8104E2D84ED8.mov">
                 <div class="vm-media">
-                  <video class="vm-video" src="copy_459B0AD1-EBF1-4F2A-A192-8104E2D84ED8.mov" preload="metadata" playsinline muted loop></video>
+                  <video class="vm-video" src="copy_459B0AD1-EBF1-4F2A-A192-8104E2D84ED8.mov" preload="metadata" playsinline muted loop poster="deca_venue.jpeg"></video>
                   <button class="vm-play" aria-label="Play video">
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
@@ -767,7 +767,7 @@
               </article>
               <article class="vm-item" data-video-src="2FF50E33-08FD-4BFF-8462-9171BBC12FE5.mov">
                 <div class="vm-media">
-                  <video class="vm-video" src="2FF50E33-08FD-4BFF-8462-9171BBC12FE5.mov" preload="metadata" playsinline muted loop></video>
+                  <video class="vm-video" src="2FF50E33-08FD-4BFF-8462-9171BBC12FE5.mov" preload="metadata" playsinline muted loop poster="IMG_0827.jpg"></video>
                   <button class="vm-play" aria-label="Play video">
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
@@ -776,7 +776,7 @@
               </article>
               <article class="vm-item" data-video-src="Testimonial.mov">
                 <div class="vm-media">
-                  <video class="vm-video" src="Testimonial.mov" preload="metadata" playsinline muted loop></video>
+                  <video class="vm-video" src="Testimonial.mov" preload="metadata" playsinline muted loop poster="IMG_1535.jpeg"></video>
                   <button class="vm-play" aria-label="Play video">
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
@@ -787,7 +787,7 @@
               <!-- Duplicate Set B for seamless loop -->
               <article class="vm-item" data-video-src="IMG_1936.mov">
                 <div class="vm-media">
-                  <video class="vm-video" src="IMG_1936.mov" preload="metadata" playsinline muted loop></video>
+                  <video class="vm-video" src="IMG_1936.mov" preload="metadata" playsinline muted loop poster="IMG_7198.jpeg"></video>
                   <button class="vm-play" aria-label="Play video">
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
@@ -796,7 +796,7 @@
               </article>
               <article class="vm-item" data-video-src="IMG_7342.mov">
                 <div class="vm-media">
-                  <video class="vm-video" src="IMG_7342.mov" preload="metadata" playsinline muted loop></video>
+                  <video class="vm-video" src="IMG_7342.mov" preload="metadata" playsinline muted loop poster="IMG_1041.jpeg"></video>
                   <button class="vm-play" aria-label="Play video">
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
@@ -805,7 +805,7 @@
               </article>
               <article class="vm-item" data-video-src="copy_459B0AD1-EBF1-4F2A-A192-8104E2D84ED8.mov">
                 <div class="vm-media">
-                  <video class="vm-video" src="copy_459B0AD1-EBF1-4F2A-A192-8104E2D84ED8.mov" preload="metadata" playsinline muted loop></video>
+                  <video class="vm-video" src="copy_459B0AD1-EBF1-4F2A-A192-8104E2D84ED8.mov" preload="metadata" playsinline muted loop poster="deca_venue.jpeg"></video>
                   <button class="vm-play" aria-label="Play video">
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
@@ -814,7 +814,7 @@
               </article>
               <article class="vm-item" data-video-src="2FF50E33-08FD-4BFF-8462-9171BBC12FE5.mov">
                 <div class="vm-media">
-                  <video class="vm-video" src="2FF50E33-08FD-4BFF-8462-9171BBC12FE5.mov" preload="metadata" playsinline muted loop></video>
+                  <video class="vm-video" src="2FF50E33-08FD-4BFF-8462-9171BBC12FE5.mov" preload="metadata" playsinline muted loop poster="IMG_0827.jpg"></video>
                   <button class="vm-play" aria-label="Play video">
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
@@ -823,7 +823,7 @@
               </article>
               <article class="vm-item" data-video-src="Testimonial.mov">
                 <div class="vm-media">
-                  <video class="vm-video" src="Testimonial.mov" preload="metadata" playsinline muted loop></video>
+                  <video class="vm-video" src="Testimonial.mov" preload="metadata" playsinline muted loop poster="IMG_1535.jpeg"></video>
                   <button class="vm-play" aria-label="Play video">
                     <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
                   </button>
