--- a/index.html
+++ b/index.html
@@ -973,6 +973,12 @@
                 <input id="name" name="name" class="form-input shadcn-input" required />
             </div>
 
+              <!-- Honeypot: hidden field for bots; humans won't see/fill -->
+              <div class="form-group" style="position: absolute; left: -10000px; top: auto; width: 1px; height: 1px; overflow: hidden;">
+                <label for="company" class="form-label shadcn-label">Company</label>
+                <input id="company" name="company" class="form-input shadcn-input" autocomplete="off" tabindex="-1" />
+              </div>
+
               <div class="form-group">
                 <label for="email" class="form-label shadcn-label">Email</label>
                 <input id="email" name="email" type="email" class="form-input shadcn-input" placeholder="you@example.com" required />
@@ -1460,6 +1466,7 @@
       const name = form.name.value.trim();
       const role = form.role.value.trim();
       const email = form.email.value.trim();
+      const company = (form.company && form.company.value || '').trim();
       const phone = '';
       const school = '';
       const region = form.region.value.trim();
@@ -1492,6 +1499,7 @@
             region,
             eventCode,
             timePerWeek,
+            company,
           }),
         });
         if (!resp.ok) {
